# personaplex

./: Dockerfile  README.md  pyproject.toml
personaplex/: __init__.py  config.py
