[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "personaplex"
version = "0.1.0"
description = "A persona-driven conversational AI framework — fork of NVIDIA/personaplex"
readme = "README.md"
license = { file = "LICENSE-MIT" }
requires-python = ">=3.10"
keywords = ["llm", "persona", "conversational-ai", "nvidia", "tts", "asr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "openai>=1.35.0",
    "numpy>=1.26.0",
    "soundfile>=0.12.1",
    "python-multipart>=0.0.9",
    "loguru>=0.7.2",
    "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.9",
    "mypy>=1.10.0",
    "httpx>=0.27.0",
]
audio = [
    "pyaudio>=0.2.14",
    "webrtcvad>=2.0.10",
]

[project.scripts]
personaplex = "personaplex.cli:app"

[project.urls]
Homepage = "https://github.com/your-org/personaplex"
Repository = "https://github.com/your-org/personaplex"
Issues = "https://github.com/your-org/personaplex/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
# Relaxing strict mode for personal experimentation — easier to prototype without
# having to annotate every helper function immediately.
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Removed --cov flags so a plain `pytest` run doesn't require pytest-cov to be
# installed. Run `pytest --cov=personaplex --cov-report=term-missing` explicitly
# when you actually want a coverage report.
addopts = "-v"

[tool.coverage.run]
source = ["src/personaplex"]
omit = ["tests/*"]
